<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.KotlinApp3TEX"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_light">


    <TextView
        android:id="@+id/g_title"
        style="@style/Title"
        android:layout_marginTop="60dp"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/btn_online"
        style="@style/NormalButton"
        android:layout_marginTop="39dp"
        android:shadowColor="@color/shadow_color"
        android:text="@string/signup"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextPassword" />



    <Button
        style="@style/BackButton"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageButton
        android:id="@+id/btn_account"
        style="@style/BackButton"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <ImageButton
        android:id="@+id/btn_menu"
        style="@style/BackButton"
        android:layout_width="41dp"
        android:layout_height="41dp"
        android:layout_marginTop="8dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"/>

    <EditText
        android:id="@+id/editTextName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="@color/txt_negro"
        android:ems="10"
        android:inputType="text"
        android:hint="@string/name"
        android:textColorHint="@color/txt_gris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/g_title" />

    <EditText
        android:id="@+id/editTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="75dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="75dp"
        android:backgroundTint="@color/txt_negro"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:textColorHint="@color/txt_gris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.47"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextTextEmailAddress" />

    <EditText
        android:id="@+id/editTextTextEmailAddress"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/txt_negro"
        android:layout_marginStart="75dp"
        android:layout_marginTop="43dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:inputType="textEmailAddress"
        android:hint="@string/email"
        android:textColorHint="@color/txt_gris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextName" />

    <EditText
        android:id="@+id/editTextTextPassword"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/txt_negro"
        android:layout_marginStart="75dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="75dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/repeat_password"
        android:textColorHint="@color/txt_gris"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editTextPassword" />


</androidx.constraintlayout.widget.ConstraintLayout>