...
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/Theme.KotlinApp3TEX"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background_light"
    android:id="@+id/menu">

    <FrameLayout
        android:id="@+id/fragmentContainer"
        android:layout_width="293dp"
        android:layout_height="match_parent"
        android:elevation="10dp"
...
